# videofix

./: CMakeLists.txt  README.md
cmake/modules/: FindOpenCV.cmake
src/: CMakeLists.txt
src/classifiers/: CMakeLists.txt
src/classifiers/include/: mlpclassifier.h
src/classifiers/src/: mlpclassifier.cpp
src/classify/: CMakeLists.txt
src/classify/src/: classify.cpp
src/interpolate/: CMakeLists.txt
src/interpolate/src/: interpolate.cpp
src/train/: CMakeLists.txt
src/train/src/: train.cpp
src/undistort/: CMakeLists.txt
src/undistort/src/: undistort.cpp
